syntax = "proto3";

package eventsourcing.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/pkg/eventsourcing/v1";

// BaseCommand contains the basic info
// that all commands should have
message BaseCommand {
  string type = 1;
  // AggregateID represents the id of the aggregate to apply to
  string aggregate_id = 2;
  string aggregate_type = 3;
  int32 version = 4;
	string payload = 5;
}
