syntax = "proto3";

package domain.billing.payment.v1;

import "domain/billing/payment/v1/payment.proto";

option go_package = "github.com/batazor/shortlink/internal/services/billing/domain/billing/payment/v1";

enum Command {
  COMMAND_UNSPECIFIED = 0;

  COMMAND_PAYMENT_CREATE = 1;
  COMMAND_PAYMENT_APPROVE = 2;
  COMMAND_PAYMENT_CLOSE = 3;
  COMMAND_PAYMENT_REJECTE = 4;
}

message CommandPaymentCreate {
  string name = 1;
}

message CommandPaymentApprove {}

message CommandPaymentRejecte {}

message CommandPaymentClose {}
